lab1/app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-petclinic
  labels:
    app: quarkus-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-petclinic
  template:
    metadata:
      labels:
        app: quarkus-petclinic
        deployment: quarkus-petclinic
    spec:
      containers:
        - name: quarkus-petclinic
          image: 'quay.io/dsanchor/quarkus-petclinic:in-mem'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
