lab1/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: quarkus-petclinic
  labels:
    app: quarkus-petclinic
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: quarkus-petclinic
    deployment: quarkus-petclinic
  type: ClusterIP
  sessionAffinity: None
